[workspace]
resolver = "2"
members = [
    "krnl",

    #"lib/acpica",
    "lib/multiboot",
    "lib/pio",

    "drv/fs",
    "drv/fs/fat",
    "drv/pci",
    "drv/pci/ahci",
    "drv/pci/xhci",

    "svc/vfs",
]

[workspace.dependencies]
log = "0.4"

pio = { path = "lib/pio" }
bitflags = "2.6"

drv_fs = { path = "drv/fs" }
drv_pci = { path = "drv/pci" }

[profile.dev]
opt-level = 1

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
