[workspace]
resolver = "2"
members = [
    "krnl",

    #"lib/acpica",
    "lib/bitmap",
    "lib/multiboot",
    "lib/pio",

    "drv/fs",
    "drv/fs/fat",
    "drv/pci",
    "drv/pci/ahci",
    "drv/pci/xhci",

    "svc/vfs",
]

[workspace.dependencies]
log = "0.4"

bitflags = "2.6"
bitmap = { path = "lib/bitmap" }
pio = { path = "lib/pio" }

drv_fs = { path = "drv/fs" }
drv_pci = { path = "drv/pci" }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
