[package]
name = "krnl"
version = "0.1.0"
authors = ["Kevin Ludwig <iam@valaphee.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
bitflags = "2.6"
spin = "0.9"
tracing = { version = "0.1", default-features = false, features = [
    "attributes",
] }

[build-dependencies]
bindgen = "0.70"
