[package]
name = "krnl"
version = "0.1.0"
authors = ["Kevin Ludwig <iam@valaphee.com>"]
edition = "2021"
description = "Meerkat operating system kernel"
license = "Apache-2.0"

[dependencies]
bitflags = "2.6"

spin = "0.9"
volatile = "0.6"

tracing = { version = "0.1", default-features = false }

#acpica = { path = "../lib/acpica" }
multiboot = { path = "../lib/multiboot" }

[build-dependencies]
bindgen = "0.70"
