[package]
name = "krnl"
version = "0.1.0"
authors = ["Kevin Ludwig <iam@valaphee.com>"]
edition = "2021"
description = "Meerkat operating system kernel"
license = "Apache-2.0"

[dependencies]
log = { workspace = true }

bitflags = { workspace = true }
bitmap = { workspace = true }
pio = { workspace = true }
spin = "0.9"

#acpica = { path = "../lib/acpica" }
multiboot = { path = "../lib/multiboot" }

[build-dependencies]
bindgen = "0.70"
