[package]
name = "drv_pci_xhci"
version = "0.1.0"
authors = ["Kevin Ludwig <iam@valaphee.com>"]
edition = "2021"
description = "xHCI driver for the Meerkat operating system."
license = "Apache-2.0"

[dependencies]
log = { workspace = true }

bitflags = { workspace = true }

drv_pci = { workspace = true }
